<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/logButton"
        android:layout_width="353dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:text="@string/log"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repInputEditText"
        android:background="@android:color/holo_blue_dark" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/logDisplayRecyclerView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/gymlog_recycler_item" />


    <TextView
        android:id="@+id/exerciseLabelTextView"
        android:layout_width="97dp"
        android:layout_height="33dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:text="@string/exercise"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logDisplayRecyclerView"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"/>

    <TextView
        android:id="@+id/weightLabelTextView"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/Weight"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseLabelTextView"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/repLabelTextView"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/reps"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightLabelTextView"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"/>

    <EditText
        android:id="@+id/exerciseInputEditText"
        android:layout_width="240dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:hint="@string/enter_an_exercise"
        android:inputType="textAutoComplete"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/exerciseLabelTextView"
        app:layout_constraintStart_toEndOf="@id/exerciseLabelTextView" />

    <EditText
        android:id="@+id/weightInputEditText"
        android:layout_width="239dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:hint="@string/enter_a_weight_"
        android:inputType="number|numberDecimal"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/weightLabelTextView"
        app:layout_constraintStart_toEndOf="@id/weightLabelTextView" />

    <EditText
        android:id="@+id/repInputEditText"
        android:layout_width="243dp"
        android:layout_height="35dp"
        android:layout_marginStart="12dp"
        android:hint="@string/enter_reps"
        android:inputType="number"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/repLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/repLabelTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>